# nightfury

./: .ammanrc.js  .gitignore  Anchor.toml  NtT6bzSrYPBsyV39rJzL8xbZB2ZSc1CbAzsT34RyWjd.json  auth-rule.json  package.json  startup.sh
programs/nightfury/: Cargo.toml
programs/nightfury/src/: lib.rs
programs/nightfury/src/errors/: mod.rs
programs/nightfury/src/instructions/: initialize.rs  mod.rs  revoke.rs  switch.rs  update.rs  update_day_uri.rs  update_night_uri.rs
programs/nightfury/src/state/: mod.rs
scripts/: fury.ts
tests/: nightfury.ts
