[package]
name = "nightfury"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nightfury"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.27.0", features = ["init-if-needed"] }
clockwork-sdk = "2.0.15"
anchor-spl = "0.27.0"
mpl-token-metadata = { version = "=1.11.1", features = ["no-entrypoint"] }
mpl-token-auth-rules = { version = "1.3.0", features = ["no-entrypoint"] }
